fix overflow issues, add email address

--- a/app/styles/footer.css
+++ b/app/styles/footer.css
@@ -67,8 +67,9 @@ footer {
           font-size: 50px !important;
         }
 
-        &> button {
+        &> .email-button {
           background-color: var(--c-bg-secondary);
+          text-decoration: none;
         }
       }
     }
