--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -5,7 +5,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-bottom: 100px;
 
     h2 {
       margin-bottom: 20px;
@@ -35,7 +34,10 @@
     .view-all-recipes-button-wrapper {
       position: relative;
       display: flex;
-      align-items: center;
+      justify-content: center;
+      width: 100vw;
+      height: 200px;
+      overflow: hidden;
 
       button {
         position: relative;
@@ -45,7 +47,7 @@
       .breeze-svg {
         position: absolute;
         height: 400px;
-        top: 70%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         opacity: 0.05;
