--- a/app/styles/mainmenu.css
+++ b/app/styles/mainmenu.css
@@ -1,6 +1,6 @@
 header {
   text-align: center;
-  padding: 50px;
+  padding: 30px;
 
   ul {
     padding-top: 15px;
