--- a/app/styles/mobilemenu.css
+++ b/app/styles/mobilemenu.css
@@ -9,7 +9,7 @@
   max-width: 100%;
   height: 100%;
   z-index: 99;
-  padding: 45px 80px 30px 100px;
+  padding: 50px 60px 30px 50px;
   transition: right .3s linear;
   -webkit-mask: var(--mask-scallop-left);
   mask: var(--mask-scallop-left);
@@ -39,8 +39,8 @@
   .search-bar {
     input {
       font-weight: bold;
-      color: white;
-      background-color: var(--c-accent-primary);
+      color: var(--c-text);
+      background-color: var(--c-bg);
     }
   }
 
